# Specilal_for_Shamil

Control1/: CMakeLists.txt  main.cpp
Homewokr12/: CMakeLists.txt  main.cpp
Homework1/: CMakeLists.txt  task1.cpp
Homework10/: CMakeLists.txt  main.cpp
Homework11/: CMakeLists.txt  main.cpp
Homework13/: CMakeLists.txt  main.cpp
Homework14/: CMakeLists.txt  main.cpp
Homework15/: CMakeLists.txt  main.cpp
Homework2/: CMakeLists.txt  main.cpp
Homework3/: CMakeLists.txt  main.cpp
Homework4/: CMakeLists.txt  main.cpp
Homework5/: CMakeLists.txt  main.cpp
Homework6/: CMakeLists.txt  main.cpp
Homework7/: CMakeLists.txt  main.cpp
Homework8/: CMakeLists.txt  main.cpp
Homework9/: CMakeLists.txt  main.cpp
MPI3/: CMakeLists.txt
MPI5_1/: CMakeLists.txt  main.cpp
MPI5_2/: CMakeLists.txt  main.cpp
MPI5_3/: CMakeLists.txt  main.cpp
MPI5_3_1/: CMakeLists.txt  main.cpp
MPI6_1/: CMakeLists.txt  main.cpp
MPI6_2/: CMakeLists.txt  main.cpp
MPI6_3/: CMakeLists.txt  main.cpp
MPI6_4/: CMakeLists.txt  main.cpp
MPI7_1/: CMakeLists.txt  main.cpp
MPI7_2/: CMakeLists.txt  main.cpp
MPI8_1/: CMakeLists.txt  main.cpp
MPI8_2/: CMakeLists.txt  main.cpp
MPI8_3/: CMakeLists.txt  main.cpp
MPI8_4/: CMakeLists.txt  main.cpp
MPI_1/: CMakeLists.txt  main.cpp
MPI_10/: CMakeLists.txt  main.cpp
MPI_11/: CMakeLists.txt  main.cpp
MPI_12/: CMakeLists.txt  main.cpp
MPI_13/: CMakeLists.txt  main.cpp
MPI_14/: CMakeLists.txt  main.cpp
MPI_2/: CMakeLists.txt  main.cpp
MPI_3/: CMakeLists.txt  main.cpp
MPI_4/: CMakeLists.txt  main.cpp
MPI_5/: main.cpp  (+1 more)
(+8 files in other folders)
